# extraction-module-poc

./: .coverage  .envrc  .envrc.example  .pre-commit-config.yaml  README.md  airflow_functional_dag.py  config.yaml  dlt_core.py  example_gcs_config.yaml  fastapi_usage_examples.md  main.py  pyproject.toml  test_dlt_core.py
cloud_run_services/azure_sql_extractor/: Dockerfile  main.py  requirements.txt
cloud_run_services/azure_sql_extractor/app/: __init__.py  config.py  dependencies.py  main.py  models.py  services.py
cloud_run_services/azure_sql_extractor/app/routers/: extraction.py  health.py
docs/: scaling_and_recommendations.md  trade_off_analysis.md
